fix the overflow-y problem

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: "Microsoft YaHei UI", sans-serif;
